# drop-app

./: .gitignore  .gitmodules  CLAUDE.md  Linux-SteamDeck-Plan.docx  README.md  ROADMAP.md  build-deck.sh  build-drop-flatpak.sh  build-drop-steamdeck.sh  changelog.legacy.md  changelog.md  drop-decky-plugin-plan.md  drop-feature-tracker.md  drop-import-reference.md  drop-wishlist.md  emulator-launchids.json  install-drop-steamdeck.sh  org.droposs.client.yml  package.json  pnpm-lock.yaml  pnpm-workspace.yaml
.claude/: settings.local.json
docs/: tailscale-lan-feasibility-2026.md
main/: app.vue  error.vue  nuxt.config.ts  package-lock.json  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  types.ts
scripts/: build-drop-flatpak.sh  build-drop-steamdeck.sh  build-windows.ps1  build.mjs  check-versions.ps1  debug-build.sh  download-emulators.ps1  download-retroarch.ps1  install-drop-flatpak.sh  install-drop-steamdeck.sh  optimize-appimage.sh  rename-game-exes.ps1  uninstall-drop-steamdeck.sh  uninstall-drop.sh
src-tauri/: Cargo.toml  rust-toolchain.toml  save  tauri.conf.json
src-tauri/database/: Cargo.toml
src-tauri/database/src/: db.rs  error.rs  interface.rs  lib.rs  migrations.rs  models.rs  platform.rs
src-tauri/remote/: Cargo.toml
src-tauri/remote/src/: achievements.rs  auth.rs  cache.rs  coop.rs  error.rs  fetch_object.rs  goldberg.rs  lib.rs  playtime.rs  requests.rs  retroarch.rs  save_sync.rs  server_proto.rs  streaming_sessions.rs  utils.rs  web_upload.rs
src-tauri/remote/src/goldberg/: achievements.rs  config.rs  crackers.rs  discovery.rs  mod.rs  sse.rs
src-tauri/remote/src/retroarch/: bios.rs  cfg.rs  controllers.rs  cores.rs  discovery.rs  mod.rs  presets.rs  ra.rs  shaders.rs
src-tauri/remote/src/save_sync/: api.rs  conflict.rs  manifest.rs  mod.rs  scan.rs
(+274 files in other folders)
